--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <reporting.model>0.5.4</reporting.model>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <jts.version>1.13</jts.version>
         <jackson.version>2.6.0</jackson.version>
         <logback.core.version>1.1.2</logback.core.version>
         <asset.module.version>2.0.6</asset.module.version>
@@ -61,6 +62,13 @@
                 <artifactId>pitest-parent</artifactId>
                 <version>1.1.10</version>
                 <type>pom</type>
+            </dependency>
+
+            <dependency>
+                <groupId>com.vividsolutions</groupId>
+                <artifactId>jts</artifactId>
+                <version>${jts.version}</version>
+                <scope>provided</scope>
             </dependency>
 
             <dependency>
@@ -130,19 +138,6 @@
 				<version>${hibernate.validator.version}</version>
 			</dependency>
 
-            <dependency>
-                <groupId>org.wololo</groupId>
-                <artifactId>jts2geojson</artifactId>
-                <version>0.7.0</version>
-            </dependency>
-            <!-- don't delete needed for org.wololo -->
-            <dependency>
-                <groupId>com.vividsolutions</groupId>
-                <artifactId>jts</artifactId>
-                <version>1.13</version>
-                <scope>provided</scope>
-            </dependency>
-
             <!-- Hibernate JPA provider provided by WildFly -->
             <dependency>
                 <groupId>org.hibernate</groupId>
@@ -155,6 +150,12 @@
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-spatial</artifactId>
                 <version>4.3</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.vividsolutions</groupId>
+                        <artifactId>jts</artifactId>
+                    </exclusion>
+                </exclusions>
                 <scope>provided</scope>
             </dependency>
 
@@ -162,6 +163,12 @@
                 <groupId>org.geotools</groupId>
                 <artifactId>gt-geojson</artifactId>
                 <version>${geotools.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.vividsolutions</groupId>
+                        <artifactId>jts</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
