--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -12,7 +12,12 @@
     </parent>
 
     <dependencies>
-    
+
+        <dependency>
+            <groupId>eu.europa.ec.fisheries.uvms</groupId>
+            <artifactId>uvms-commons</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms</groupId>
             <artifactId>usm4uvms</artifactId>
