--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
     <description>Maven projekt-archetype for UnionVms modules</description>
 
 
-    <properties>
+  <properties>
 
         <!-- The spatial name is used as a common point to rename the application alias visible in USM-->
         <spatial.name>Spatial</spatial.name>
         <spatial.model>1.0.5-SNAPSHOT</spatial.model>
-        <reporting.model>1.0.2</reporting.model>
+        <reporting.model>1.0.3-SNAPSHOT</reporting.model>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <jts.version>1.13</jts.version>
@@ -34,7 +34,7 @@
         <uvms.commons.version>2.0.18-SNAPSHOT</uvms.commons.version>
         <uvms.test.version>0.0.4</uvms.test.version>
         <hibernate.validator.version>5.2.1.Final</hibernate.validator.version>
-        <usm4uvms.version>2.0.19</usm4uvms.version>
+        <usm4uvms.version>3.0.6-SNAPSHOT</usm4uvms.version>
         <usm_deployment_descriptor_force_update>false</usm_deployment_descriptor_force_update>
         <release.branch.name>uvms-1.0.0</release.branch.name>
         <maven.release.plugin.version>2.5.2</maven.release.plugin.version>
