--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
     <artifactId>spatial</artifactId>
-    <version>0.5.7</version>
+    <version>0.5.8-SNAPSHOT</version>
     <packaging>pom</packaging>
     <description>Maven projekt-archetype for UnionVms modules</description>
 
@@ -224,7 +224,7 @@
 
     <scm>
         <connection>${scm.connection}</connection>
-        <tag>spatial-0.5.7</tag>
+        <tag>HEAD</tag>
     </scm>
 
 
