--- a/deploy-weblogic/pom.xml
+++ b/deploy-weblogic/pom.xml
@@ -20,6 +20,12 @@
 
     <dependencies>
         <dependency>
+			<groupId>fish.focus.uvms.maven</groupId>
+			<artifactId>uvms-pom-monitoring-deps</artifactId>
+			<type>pom</type>
+		</dependency>
+    
+        <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
         </dependency>
