--- a/deploy-wildfly/pom.xml
+++ b/deploy-wildfly/pom.xml
@@ -64,6 +64,13 @@
             <artifactId>uvms-commons</artifactId>
             <version>${uvms.commons.version}</version>
         </dependency>
+        
+        <dependency>
+			<groupId>fish.focus.uvms.maven</groupId>
+			<artifactId>uvms-pom-monitoring-deps</artifactId>
+			<type>pom</type>
+		</dependency>
+        
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>message</artifactId>
