--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
     <dependencyManagement>
 
         <dependencies>
+			<dependency>
+				<groupId>fish.focus.uvms.maven</groupId>
+				<artifactId>uvms-pom-monitoring-deps</artifactId>
+				<version>1.8</version>
+				<type>pom</type>
+			</dependency>
 
             <dependency>
                 <groupId>org.slf4j</groupId>
