--- a/service/pom.xml
+++ b/service/pom.xml
@@ -20,6 +20,12 @@
         </dependency>
 
         <dependency>
+			<groupId>fish.focus.uvms.maven</groupId>
+			<artifactId>uvms-pom-monitoring-deps</artifactId>
+			<type>pom</type>
+		</dependency>
+
+        <dependency>
             <groupId>eu.europa.ec.fisheries.uvms.reporting</groupId>
             <artifactId>reporting-model</artifactId>
         </dependency>
