--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
     <artifactId>spatial</artifactId>
-    <version>0.5.9</version>
+    <version>0.5.10-SNAPSHOT</version>
     <packaging>pom</packaging>
     <description>Maven projekt-archetype for UnionVms modules</description>
 
@@ -235,7 +235,7 @@
 
     <scm>
         <connection>${scm.connection}</connection>
-        <tag>spatial-0.5.9</tag>
+        <tag>HEAD</tag>
     </scm>
 
 
