--- a/pom.xml
+++ b/pom.xml
@@ -320,13 +320,33 @@
                     </excludes>
                     <includes>
                     	<include>**/*Test.java</include>
-                    	<include>**/*IT.java</include>                   	
                     </includes>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
+	<profiles>
+		<profile>
+			<id>arquillian-test</id>
+			<build>
+				<plugins>
+		            <plugin>
+		                <groupId>org.apache.maven.plugins</groupId>
+		                <artifactId>maven-surefire-plugin</artifactId>
+		                <configuration>
+		                    <excludes>
+		                        <exclude>**/*ITest.java</exclude>
+		                    </excludes>
+		                    <includes>
+		                    	<include>**/*Test.java</include>
+		                    	<include>**/*IT.java</include>                   	
+		                    </includes>
+		                </configuration>
+		            </plugin>				
+				</plugins>				
+			</build>
+		</profile>	
+	</profiles>
     <!-- add repositories for JTS and Hibernate Spatial and Hibernate (JBoss) -->
     <repositories>
         <repository>
