--- a/LIQUIBASE/pom.xml
+++ b/LIQUIBASE/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>eu.europa.ec.fisheries.uvms.spatial</groupId>
         <artifactId>spatial-db</artifactId>
-        <version>1.0.5</version>
+        <version>1.0.6-SNAPSHOT</version>
     </parent>
 	
 	    <dependencies>
