--- a/deploy-wildfly/pom.xml
+++ b/deploy-wildfly/pom.xml
@@ -60,8 +60,8 @@
             <version>${usm4uvms.version}</version>
         </dependency>
         <dependency>
-            <groupId>eu.europa.ec.fisheries.uvms</groupId>
-            <artifactId>uvms-commons</artifactId>
+            <groupId>eu.europa.ec.fisheries.uvms.commons</groupId>
+            <artifactId>uvms-commons-message</artifactId>
             <version>${uvms.commons.version}</version>
         </dependency>
         
