--- a/message/pom.xml
+++ b/message/pom.xml
@@ -20,8 +20,8 @@
         </dependency>
 
         <dependency>
-            <groupId>eu.europa.ec.fisheries.uvms</groupId>
-            <artifactId>uvms-commons</artifactId>
+            <groupId>eu.europa.ec.fisheries.uvms.commons</groupId>
+            <artifactId>uvms-commons-message</artifactId>
         </dependency>
 
         <dependency>
@@ -36,6 +36,12 @@
 			<classifier>xmlgregoriancalendar</classifier>
             <scope>provided</scope>
         </dependency>
+        
+        <dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.18</version>
+		</dependency>
 
     </dependencies>
 
