--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,10 @@
         <hibernate.version>4.3.5.Final</hibernate.version>
         <hibernate-spatial.version>4.3</hibernate-spatial.version>
         <geotools.version>14.4</geotools.version>
-        <uvms.commons.version>2.0.30</uvms.commons.version>
+        <uvms.commons.version>3.0.0-SNAPSHOT</uvms.commons.version>
         <uvms.test.version>0.0.8</uvms.test.version>
         <hibernate.validator.version>5.2.1.Final</hibernate.validator.version>
-        <usm4uvms.version>3.0.9</usm4uvms.version>
+        <usm4uvms.version>4.0.0</usm4uvms.version>
         <usm_deployment_descriptor_force_update>false</usm_deployment_descriptor_force_update>
         <release.branch.name>uvms-1.0.0</release.branch.name>
         <maven.scm.provider.version>2.1.1</maven.scm.provider.version>
@@ -108,10 +108,9 @@
             </dependency>
 
             <dependency>
-                <groupId>eu.europa.ec.fisheries.uvms</groupId>
-                <artifactId>uvms-commons</artifactId>
+	            <groupId>eu.europa.ec.fisheries.uvms.commons</groupId>
+	            <artifactId>uvms-commons-message</artifactId>
                 <version>${uvms.commons.version}</version>
-				<optional>true</optional>
 			</dependency>
 
             <dependency>
