--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -30,8 +30,8 @@
 		</dependency>
 
         <dependency>
-            <groupId>eu.europa.ec.fisheries.uvms</groupId>
-            <artifactId>uvms-commons</artifactId>
+            <groupId>eu.europa.ec.fisheries.uvms.commons</groupId>
+            <artifactId>uvms-commons-message</artifactId>
         </dependency>
 
         <dependency>
