--- a/service/pom.xml
+++ b/service/pom.xml
@@ -75,6 +75,11 @@
             <artifactId>uvms-commons-dao</artifactId>
             <version>${uvms.commons.version}</version>
         </dependency>
+        <dependency>
+            <groupId>eu.europa.ec.fisheries.uvms.commons</groupId>
+            <artifactId>uvms-commons-rest</artifactId>
+            <version>${uvms.commons.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>eu.europa.ec.fisheries.uvms.movement</groupId>
