--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -89,16 +89,19 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
+			<scope>provided</scope>
 		</dependency>
-
+		
          <dependency>
 			 <groupId>org.jboss.resteasy</groupId>
     		<artifactId>resteasy-jaxb-provider</artifactId>
+    		<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 		    <groupId>org.jboss.resteasy</groupId>
 		    <artifactId>jaxrs-api</artifactId>
+		    <scope>provided</scope>
 		</dependency>
 
     </dependencies>
