--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.25</version>
+            <version>1.7.28</version>
         </dependency>
 
         <dependency>
@@ -39,7 +39,7 @@
 		<dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-annotations</artifactId>
-		    <version>2.9.5</version>
+		    <version>2.9.9</version>
 		    <scope>provided</scope>
 		</dependency>
         
@@ -73,15 +73,16 @@
             <version>2.9.4</version>
             <scope>test</scope>
         </dependency>
-        <!--dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>message</artifactId>
-            <scope>test</scope>
-        </dependency-->
         <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
-            <version>2.25.1</version>
+            <version>2.29</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.inject</groupId>
+            <artifactId>jersey-hk2</artifactId>
+            <version>2.29</version>
             <scope>test</scope>
         </dependency>
 
