--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -91,6 +91,11 @@
             <version>2.29</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>eu.europa.ec.fisheries.uvms.commons</groupId>
+            <artifactId>uvms-commons-rest</artifactId>
+            <version>${uvms.commons.version}</version>
+        </dependency>
 
     </dependencies>
 
