--- a/client/pom.xml
+++ b/client/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>spatialSwe</artifactId>
         <groupId>eu.europa.ec.fisheries.uvms.spatialSwe</groupId>
-        <version>2.0.6-UVMS</version>
+        <version>2.0.7-UVMS-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
